# techbold_track_template

./: .env.example  .gitignore  README.md  docker-compose.yml  mise.toml  skills-lock.json  techbold-case.md
.zed/: settings.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260607_0001_initial_run_store.py
backend/app/: activity_generator.py  agent_graph.py  agent_orchestrator.py  api_dependencies.py  audit_store.py  backup_service.py  config.py  database.py  evidence_detector.py  logging_config.py  main.py  persistence_mappers.py  persistence_models.py  phoenix_cache.py  phoenix_client.py  postgres_run_store.py  run_store.py  safety_layer.py  schemas.py  ssh_runner.py  worker.py
backend/app/agent/: orchestrator.py  run_manager.py
backend/app/core/: config.py
backend/app/routers/: tickets.py
backend/app/routes/: activities.py  activity.py  backups.py  commands.py  events.py  evidence.py  health.py  integration.py  runs.py  tickets.py  validation.py
backend/app/schemas/: erp.py
backend/app/services/: erp.py  safety.py  ssh.py
backend/tests/: test_agent_graph.py  test_agent_orchestrator.py  test_backend_api_surface_docs.py  test_evidence_detector.py  test_fake_ssh_worker_integration.py  test_milestone5_backup_ledgers.py  test_milestone6_run_loop.py  test_phoenix_client.py  test_postgres_persistence_integration.py  test_run_api.py  test_run_store.py  test_safety_layer.py  test_ssh_runner.py  test_worker.py
docs/: agent-spec.md  application-spec.md  demo-rehearsal.md  (+8 more)
(+33 files in other folders)
