[project]
name = "backend"
version = "0.1.0"
description = "techbold AI Service Desk Autopilot backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.6",
    "pydantic-settings==2.7.1",
    "uvicorn[standard]==0.34.0",
    "httpx",
    "asyncssh",
    "openai",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "python-dotenv"
]