[project]
name = "backend"
version = "0.1.0"
description = "techbold AI Service Desk Autopilot backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi==0.115.6",
    "httpx>=0.28.1",
    "langgraph>=1.0.8,<2",
    "openai>=2.41.0",
    "paramiko>=5.0.0",
    "psycopg>=3.2,<4",
    "pydantic-settings==2.7.1",
    "sqlalchemy>=2.0,<3",
    "sse-starlette>=3.0.3",
    "structlog>=25,<26",
    "tenacity>=9.1.4",
    "uvicorn[standard]==0.34.0",
]
